syntax = "proto3";
import "google/protobuf/empty.proto";
package ride_sharing.trip;

option java_package = "dev.techdozo.ride_sharing.trip";


message TripDataRequest {
  RideType ride_type = 1;
  double latitude = 2;
  double longitude = 3;
}

message RideType {
  string driver_id = 1;
  string ride_id = 2;
}

message TripSummaryResponse {
  double distance = 1;
  double charge = 2;
}


service TripService {
  rpc SendTripData(stream TripDataRequest) returns (TripSummaryResponse);
}